Finalizar cliente e conexão RMI